k8s/apps/baikal/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: baikal
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baikal
  namespace: baikal
  labels:
    app.kubernetes.io/name: baikal
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: baikal
  template:
    metadata:
      labels:
        app.kubernetes.io/name: baikal
        newt.homelab/allow: "true"
    spec:
      containers:
        - name: baikal
          image: ckulka/baikal:0.10.1-nginx@sha256:434bdd162247cc6aa6f878c9b4dce6216e39e79526b980453b13812d5f8ebf4b
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /var/www/baikal/config
            - name: data
              mountPath: /var/www/baikal/Specific
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: baikal-config
        - name: data
          persistentVolumeClaim:
            claimName: baikal-data
---
apiVersion: v1
kind: Service
metadata:
  name: baikal
  namespace: baikal
  annotations:
    gatus.home-operations.com/endpoint: |
      alerts:
        - type: pushover
spec:
  selector:
    app.kubernetes.io/name: baikal
  ports:
    - port: 80
      targetPort: 80
      name: http
